<resources>
    <string name="app_name">易丟丟</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="mine">我</string>
    <string name="lost_record">失物记录</string>
    <string name="found_record">招领记录</string>
    <string name="find_record">发现记录</string>
    <string name="change_information">修改资料</string>
    <string name="share">分享</string>
    <string name="realname_identify">实名认证</string>
    <string name="change_password">修改密码</string>
    <string name="clean_buffer">清空缓存</string>
    <string name="feedback">意见反馈</string>
    <string name="upbate">系统更新</string>
    <string name="problems">常见问题</string>
    <string name="search">搜索</string>
    <string name="search_hint">请输入丢失物品的关键字</string>
    <string name="lost_information">失物</string>
    <string name="found_information">招领</string>
    <string name="find">发现</string>
    <string name="PostLostMessage">发布失物信息</string>
    <string name="LostThingsName">失物名称：</string>
    <string name="LostTime">丢失时间：</string>
    <string name="LostPlace">丢失地点：</string>
    <string name="BriefIntroduction">失物简介</string>
    <string name="PostFoundMessage">发布招领信息</string>
    <string name="FoundThingsName">拾物名称：</string>
    <string name="FoundTime">拾物时间：</string>
    <string name="FoundPlace">拾物地点：</string>
    <string name="BriefIntroduction_found">拾物简介</string>
    <string name="choose_found_type">请选择拾物类型</string>
    <string name="WordNumberLimit">0/500个字</string>
    <string name="PostPicture">上传图片</string>
    <string name="submit">提交</string>
    <string name="choose_lost_type">请选择失物类型</string>
    <string name="title">标题：</string>
    <string name="content">正文内容：</string>
    <string name="PostFindMessage">发布发现信息</string>
    <string name="Login">登录</string>
    <string name="put_in_id">请输入账号</string>
    <string name="put_in_password">请输入密码</string>
    <string name="remember_password">记住密码</string>
    <string name="forget_password">忘记密码</string>
    <string name="quick_register">快速注册</string>
    <string name="third_party_login">第三方登录</string>
    <string name="put_in_telephonenumber">注册的手机号</string>
    <string name="get_auth_code">获取验证码</string>
    <string name="auth_code">请输入验证码</string>
    <string name="new_password_6to18">请输入6-18位新密码</string>
    <string name="affirm_new_password">确认密码</string>
    <string name="next_stage">下一步</string>
    <string name="register">注册</string>
    <string name="telephonenumber">手机号</string>
    <string name="put_in_password_6to18">请输入6-18位密码</string>
    <string name="agree">注册即表示已阅读并同意</string>
    <string name="client_protocol">《用户服务协议》</string>
    <string name="put_in_ins_infer">填写机构信息</string>
    <string name="institution_name">机构名称：</string>
    <string name="put_in_ins_name">请填写企业名称</string>
    <string name="institution_address">企业地址：</string>
    <string name="put_in_ins_address">请填写企业所在地</string>
    <string name="institution_intro">企业简介：</string>
    <string name="put_in_ins_intro">一句话描述企业</string>
    <string name="linkman">联系人：</string>
    <string name="tele">手机：</string>
    <string name="fixed_line">固定电话：</string>
    <string name="login_head_back">注册类型</string>
    <string name="email">Email</string>
    <string name="login_head_front">请选择您的</string>
    <string name="register_individual">个人注册</string>
    <string name="register_institution">机构注册</string>
    <string name="select_identity_front">请选择您的</string>
    <string name="select_identity_back">身份类别</string>
    <string name="student">在校生</string>
    <string name="society">非在校生</string>
    <string name="login">登录</string>
    <string name="slip">跳过</string>
    <string name="guide_text_front">助人为乐，</string>
    <string name="guide_text_two">是一种境界</string>
    <string name="guide_text_three">是一种追求</string>
    <string name="guide_text_one">是一种态度</string>
    <string name="guide_text_four">是一种选择</string>
    <string name="homepage">首页</string>
    <string name="discover">发现</string>
    <string name="message">消息</string>
    <string name="lostacticle">失物</string>
    <string name="announce">招领</string>
    <string name="only_choose_num">超出可选图片张数</string>
    <string name="finish">完成</string>
    <string name="invalidSD">sdcard无效或没有插入！</string>
    <string name="photo">选择相册</string>
    <string name="album">相册</string>
    <string name="preview">预览</string>
    <string name="unfinished">完成</string>
    <string name="camera_cancel">取消</string>
    <string name="no_photo">相册没有图片</string>
    <string name="smssdk_bind_mobile_show">注册或绑定手机演示</string>
    <string name="smssdk_contact">通讯录好友</string>
    <string name="smssdk_appkey_dialog_title">请输入您的应用信息</string>
    <string name="smssdk_appkey">AppKey</string>
    <string name="smssdk_appkey_hint">请输入您的AppKey</string>
    <string name="smssdk_appsecret">AppSecret</string>
    <string name="smssdk_appsecrethint">请输入您的AppSecret</string>
    <string name="more">更多</string>
    <string name="sm_item_demo">接口</string>
    <string name="sm_item_auth">授权</string>
    <string name="sm_item_wechat">微信</string>
    <string name="sm_item_yixin">易信</string>
    <string name="sm_item_customer">自定义接口</string>
    <string name="sm_item_custom_fields">自定义分享内容</string>
    <string name="sm_item_fl_weibo">关注新浪微博</string>
    <string name="sm_item_fl_tc">关注腾讯微博</string>
    <string name="sm_item_share_view">摇一摇截屏分享</string>
    <string name="sm_item_visit_website">关注官方网站</string>
    <string name="sm_item_about">Demo版本 Ver. %s</string>
    <string name="plz_choose_wechat">请选择微信客户端完成操作</string>
    <string name="get_token_format">获取%s的AccessToken</string>
    <string name="get_user_info_format">获取%s授权用户资料</string>
    <string name="get_other_info_format">获取%s其他用户资料</string>
    <string name="share_to_format">分享到%s</string>
    <string name="demo_share_all_gui">分享全部（有分享界面）</string>
    <string name="demo_share_all">分享全部（无界面，直接分享）</string>
    <string name="demo_get_access_token">获取AccessToken</string>
    <string name="demo_get_my_info">获取授权用户资料</string>
    <string name="demo_get_other_info">获取其他用户资料</string>
    <string name="get_sina_friends_list">获取新浪微博关注列表</string>
    <string name="get_tencent_friends_list">获取腾讯微博关注列表</string>
    <string name="customer_douban">搜索用户</string>
    <string name="customer_facebook">获取通知列表</string>
    <string name="customer_nemb">获取推荐话题</string>
    <string name="customer_renren">上传照片到用户的相册</string>
    <string name="customer_sina">获取微博主页列表</string>
    <string name="customer_qzone">发表日志到QQ空间</string>
    <string name="customer_tencent">获取我的粉丝列表</string>
    <string name="customer_twitter">获取主页列表</string>
    <string name="customer_kaixin">获取可能认识的人</string>
    <string name="customer_sohu">获取好友列表</string>
    <string name="customer_youdao">获取笔记本列表</string>
    <string name="customer_suishenkan">获取搜狐随身看书签列表</string>
    <string name="customer_tumblr">获取Tumblr用户Post列表</string>
    <string name="not_yet_authorized">尚未授权</string>
    <string name="evenote_title">易丢丢失物招领平台</string>
    <string name="update">文字分享</string>
    <string name="image_upload">图片分享（本地图片）</string>
    <string name="image_upload_bitmap">图片分享（Bitmap对象）</string>
    <string name="image_upload_url">图片分享（网络图片）</string>
    <string name="emoji_upload">表情分享（本地图片）</string>
    <string name="emoji_upload_url">表情分享（网络图片）</string>
    <string name="emoji_upload_bm">表情分享（Bitmap对象）</string>
    <string name="music_upload">音乐分享</string>
    <string name="video_upload">视频分享</string>
    <string name="webpage_upload">网页分享（本地图片）</string>
    <string name="webpage_upload_bitmap">网页分享（Bitmap对象）</string>
    <string name="webpage_upload_url">网页分享（网络图片）</string>
    <string name="app_upload">应用分享（携带文件）</string>
    <string name="app_upload_extinfo">应用分享（携带脚本）</string>
    <string name="file_upload">文件分享</string>
    <string name="share_to_wechat">微信好友</string>
    <string name="share_to_moment">微信朋友圈</string>
    <string name="share_to_favorite">微信收藏</string>
    <string name="wechat_demo_title">微信分享Demo标题</string>
    <string name="qzone_add_blog_sample"><h1>QQ互联</h1><font color="red">轻松分享,</font><font color="green">快乐生活。</font><a href="http://connect.qq.com">详情请看。</a><img src="http://imgcache.qq.com/ptlogin/head/1_100.gif"></img></string>
    <string name="wechat_client_is_not_installed_correctly">微信客户端未安装或版本太旧</string>
    <string name="wechat_client_not_support_following_operation">微信客户端不支持第三方应用执行关注功能</string>
    <string name="share_to_yixin">易信好友</string>
    <string name="share_to_yixin_moment">易信朋友圈</string>
    <string name="share_to_yixin_favorite">易信收藏</string>
    <string name="yixin_demo_title">易信分享Demo标题</string>
    <string name="receive_rewards">恭喜你得到%s个金币！</string>
    <string name="buy_success">购买成功</string>
    <string name="buy_failed">购买失败</string>
    <string name="laiwangcustomize">自定义平台-来往</string>
    <string name="qzone_customer_share_style">自定义QQ空间分享风格</string>
    <string name="qq_share_way">请选择分享方式</string>
    <string name="qq_share_from_qqlogin">QQ/QZone登录发微博</string>
    <string name="qq_share_from_tlogin">腾讯微博登录发微博</string>
    <string name="version_name">版本号</string>
    <string name="can_not_find_version_name">没有发现新版本</string>
    <string name="service0">&#160;&#160;&#160;用户在接受本应用服务之前，请务必仔细阅读本条款并同意本声明。用户使用本应用的行为以及通过各类方式利用本应用的行为，都将被视作是对本声明全部内容的无异议的认可;如有异议，请立即跟应用版权所有者协商，并取得相关的书面同意意见。</string>
    <string name="service1">&#160;&#160;&#160;用户在从事与本应用相关的所有行为(包括但不限于浏览、分享、扩散)时，必须以善意且谨慎的态度行事; 用户不得故意或者过失的损害或者弱化本应用的各类合法权利与利益，不得利用本应用以任何方式直接或者间接的从事违反中国法律、国际公约以及社会公德的行为，且用户应当恪守下述承诺：</string>
    <string name="service_1">1、传输和利用信息符合中国法律、国际公约的规定、符合公序良俗;</string>
    <string name="service_2">2、不将本应用以及与之相关的服务用作非法用途以及非正当用途;</string>
    <string name="service_3">3、不干扰和扰乱本应用以及与之相关的各项服务;</string>
    <string name="service_4">4、遵守与本应用以及与之相关的服务的协议、规定、程序和惯例等。</string>
    <string name="service2">&#160;&#160;&#160;本应用郑重提醒用户：请在发表、分享或者下载有关作品时务必尊重该作品的版权、著作权;如果您发现有您未署名的作品，请立即和我们联系，我们会在第一时间加上您的署名或作相关处理。</string>
    <string name="service3">&#160;&#160;&#160;除我们另有明确说明或者中国法律有强制性规定外，本应用用户原创的作品，本应用及作者共同享有版权，其他网站、应用及传统媒体如需使用，须取得本应用的书面授权，未经授权严禁转载或用于其它商业用途。</string>
    <string name="service4">&#160;&#160;&#160;本应用内容仅代表作者本人的观点，不代表本应用的观点和看法，与本应用立场无关，相关责任作者自负。</string>
    <string name="service5">&#160;&#160;&#160;本应用有权将在站内发表的信息用于其他用途，包括网站、电子杂志等。</string>
    <string name="service6">&#160;&#160;&#160;未经常本应用和作者共同同意，其他任何机构不得以任何形式侵犯其作品著作权，包括但不限于：擅自复制、链接、非法使用或转载，或以任何方式建立作品镜像。</string>
    <string name="service7">&#160;&#160;&#160;本应用所发表的各类形式(包括但不仅限于文字、图片、图表)的作品仅供参考使用，并不代表本网站同意其说法或描述，仅为提供更多信息，也不构成任何投资建议。对于访问者根据本应用提供的信息所做出的一切行为，除非另有明确的书面承诺文件，否则本应用不承担任何形式的责任。</string>
    <string name="service8">&#160;&#160;&#160;当本应用推荐其他网站内容时，本应用并不对这些网站或资源的可用性负责，且不保证从这些网站获取的任何内容、产品、服务或其他材料的真实性、合法性，对于任何因使用或信赖从此类网站或资源上获取的内容、产品、服务或其他材料而造成(或声称造成)的任何直接或间接损失，本应用均不承担任何责任。</string>
    <string name="service9">&#160;&#160;&#160;访问者在本应用注册时提供的一些个人资料，本应用除您本人同意及第十条规定外不会将用户的任何资料以任何方式泄露给任何一方。</string>
    <string name="service10">&#160;&#160;&#160;当政府部门、司法机关等依照法定程序要求本应用披露个人资料时，本应用将根据执法单位之要求或为公共安全之目的提供个人资料。在此情况下之任何披露，本应用均得免责。</string>
    <string name="service11">&#160;&#160;&#160;本应用有部分内容来自互联网，如无意中侵犯了哪个媒体、公司、企业或个人等的知识产权，请来电或致函告之，本应用将在规定时间内给予删除等相关处理，若有涉及版权费等问题，请及时提供相关证明等材料并与我们联系，通过友好协商公平公正原则处理纠纷。</string>
    <string name="service12">&#160;&#160;&#160;以上声明内容的最终解释权归易丢丢失物招领平台所有。</string>
    <string name="allCountry">全国</string>
    <string name="turn_to_city">切换到城市</string>
    <string name="turn">切换</string>
    <string name="turn_to_school">切换到学校</string>
    <string name="current_location">当前位置 ：</string>
    <string name="turn_to_someWhere">切换到城市或学校</string>
    <string name="category">分类</string>
    <string name="choose_province">选择省份</string>
    <string name="click_login">点击登录</string>
    <string name="click_login_text">您还未登录，请点击登录</string>
    <string name="please_input_phone_number">请输入手机号码</string>
    <string name="AES">AES</string>
    <string name="school">学校</string>
    <string name="city">城市</string>
</resources>