<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/platform_introduction"
        android:layout_width="fill_parent"
        android:layout_height="50.0dip"
        android:background="#36cd00" >

        <TextView
            android:id="@+id/platform"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:duplicateParentState="true"
            android:gravity="center_vertical"
            android:text="使用协议"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/back"
            android:layout_width="50.0dip"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="#00808080"
            android:contentDescription="@null"
            android:src="@drawable/arrow_left_gray_white" />
    </RelativeLayout>

    <com.tx.lfclient.view.OverScrollView
        android:id="@+id/post_lost_message_scrollView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:scrollbars="none" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@mipmap/background_green"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="38dp"
                android:gravity="center"
                android:text="易丢丢使用协议 "
                android:textSize="18sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="18dp"
                android:orientation="horizontal" >
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service0" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="10dp"
                android:orientation="horizontal" >
            </LinearLayout>

            <TextView
                android:id="@+id/service1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="第1条："
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_2" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_3" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service_4" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:orientation="horizontal" >
            </LinearLayout>

            <TextView
                android:id="@+id/service2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="第2条："
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:orientation="horizontal" >
            </LinearLayout>

            <TextView
                android:id="@+id/service3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="第3条："
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service3" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:orientation="horizontal" >
            </LinearLayout>

            <TextView
                android:id="@+id/service4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="第4条："
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service4" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:orientation="horizontal" >
            </LinearLayout>

            <TextView
                android:id="@+id/service5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="第5条："
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service5" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:orientation="horizontal" >
            </LinearLayout>

            <TextView
                android:id="@+id/service6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="第6条："
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service6" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:orientation="horizontal" >
            </LinearLayout>

            <TextView
                android:id="@+id/service7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="第7条："
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service7" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:orientation="horizontal" >
            </LinearLayout>

            <TextView
                android:id="@+id/service8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="第8条："
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service8" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:orientation="horizontal" >
            </LinearLayout>

            <TextView
                android:id="@+id/service9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="第9条："
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service9" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:orientation="horizontal" >
            </LinearLayout>

            <TextView
                android:id="@+id/service10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="第10条："
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service10" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:orientation="horizontal" >
            </LinearLayout>

            <TextView
                android:id="@+id/service11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="第11条："
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service11" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="20dp"
                android:orientation="horizontal" >
            </LinearLayout>

            <TextView
                android:id="@+id/service12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="第12条："
                android:textSize="15dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/service12" />
        </LinearLayout>
    </com.tx.lfclient.view.OverScrollView>

</LinearLayout>