<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/background_green"
    android:orientation="vertical" >

    <RelativeLayout
        android:id="@+id/account_setting"
        android:layout_width="fill_parent"
        android:layout_height="50.0dip"
        android:background="#36cd00" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:duplicateParentState="true"
            android:gravity="center_vertical"
            android:text="@string/turn_to_someWhere"
            android:textColor="#ffffff"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/change_location_back"
            android:layout_width="50.0dip"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:background="#00808080"
            android:contentDescription="@null"
            android:src="@drawable/arrow_left_gray_white" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#ffffff"
        android:orientation="horizontal" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:paddingLeft="15dp"
            android:paddingStart="15dp"
            android:paddingEnd="0dp"
            android:paddingRight="0dp"
            android:text="@string/current_location"
            android:textSize="18sp" />

        <HorizontalScrollView
            android:id="@+id/change_location_scrollview"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:scrollbars="none" >

            <TextView
                android:id="@+id/change_location_location_now"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingLeft="5dp"
                android:paddingStart="5dp"
                android:paddingEnd="0dp"
                android:paddingRight="0dp"
                android:text="@string/app_name"
                android:textColor="#ffa500"
                android:textSize="16sp" />
        </HorizontalScrollView>

        <TextView
            android:layout_width="0.5dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:background="#808080"
            android:paddingBottom="5dp"
            android:paddingTop="5dp" />

        <TextView
            android:id="@+id/change_location_location_china"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/allCountry"
            android:textColor="@color/normal_green_pressed_gray"
            android:textSize="18sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#808080" >
    </LinearLayout>


        <RelativeLayout
            android:id="@+id/change_location_one"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#ffffff" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:paddingLeft="15dp"
                android:paddingStart="15dp"
                android:paddingRight="0dp"
                android:paddingEnd="0dp"
                android:text="@string/turn_to_city"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:paddingLeft="0dp"
                android:paddingStart="0dp"
                android:paddingRight="30dp"
                android:paddingEnd="30dp"
                android:text="@string/turn"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/change_location_city_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:clickable="false"
                android:paddingRight="10dp"
                android:paddingEnd="10dp"
                android:paddingStart="0dp"
                android:paddingLeft="0dp"
                android:src="@drawable/arrow_right_gray_white" />
        </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#808080" >
    </LinearLayout>


        <RelativeLayout
            android:id="@+id/change_location_two"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="#ffffff" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:gravity="center_vertical"
                android:paddingLeft="15dp"
                android:paddingStart="15dp"
                android:paddingRight="0dp"
                android:paddingEnd="0dp"
                android:text="@string/turn_to_school"
                android:textSize="18sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                 android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:paddingLeft="0dp"
                android:paddingStart="0dp"
                android:paddingRight="30dp"
                android:paddingEnd="30dp"
                android:text="@string/turn"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/change_location_school_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:clickable="false"
                android:paddingRight="10dp"
                android:paddingEnd="10dp"
                android:paddingStart="0dp"
                android:paddingLeft="0dp"
                android:src="@drawable/arrow_right_gray_white"
               />
        </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="#808080" >
    </LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:gravity="center" >

        <Button
            android:id="@+id/change_location_cancel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:background="@drawable/text_orange_pink"
            android:text="@string/cancel"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:textStyle="normal" />
    </LinearLayout>

</LinearLayout>